--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
+    "typescript": "5.5.4",
     "vite": "^5.1.4",
     "vitest": "^1.3.1"
   }
