--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
     "noImplicitThis": true,
     "alwaysStrict": true,
 
-    "types": ["vitest/globals"]
+    "types": ["vitest/globals", "node"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
