feat: upgrade image tools module

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 node_modules
 dist
+.next
 .vite
 coverage
 .DS_Store
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
