feat(ui): unify design system styling

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,9 @@
 {
-  "*.{ts,tsx,js,jsx}": ["eslint --fix", "prettier --write", "vitest --run --bail"],
+  "*.{ts,tsx,js,jsx}": [
+    "eslint --fix",
+    "prettier --write",
+    "vitest --run --bail=1 --passWithNoTests"
+  ],
   "*.json": ["prettier --write"],
   "*.md": ["prettier --write"]
 }
