--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
   "name": "persian-tools",
-  "private": true,
+  "private": false,
   "version": "1.0.0",
   "packageManager": "pnpm@9.15.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:lib": "tsup",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx",
+    "lint:ci": "pnpm lint",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write .",
     "check": "pnpm lint && pnpm typecheck && pnpm format:check",
     "test": "vitest",
+    "test:ci": "vitest --run --coverage",
     "test:watch": "vitest --watch",
     "test:e2e": "playwright test",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format:check": "prettier --check .",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
+    "bench": "vitest bench",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
     "analyze": "ANALYZE=true next build",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "docs:api": "typedoc",
+    "release": "semantic-release"
   },
   "dependencies": {
     "@pdf-lib/fontkit": "^1.1.1",
@@ -69,11 +75,35 @@
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
+    "semantic-release": "^23.0.8",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.0.6",
+    "@semantic-release/npm": "^12.0.1",
     "tailwindcss": "^3.4.1",
     "terser": "^5.46.0",
+    "tsup": "^8.3.0",
+    "typedoc": "^0.27.6",
     "typescript": "5.5.4",
     "vitest": "^1.6.0"
   },
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE",
+    "CHANGELOG.md"
+  ],
+  "sideEffects": false,
   "description": "A comprehensive collection of free online tools for Persian speakers - PDF tools, financial calculators, image processing. Client-side processing for privacy and security.",
   "keywords": [
     "persian",
@@ -89,6 +119,9 @@
   ],
   "author": "Persian Tools Team",
   "license": "MIT",
+  "engines": {
+    "node": ">=20"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/asdeveloop/persian-tools.git"
