--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: "🧪 Unit & Integration Tests"
+name: '🧪 Unit & Integration Tests'
 
 on:
   push:
@@ -15,27 +15,27 @@ jobs:
         node-version: [20.x, 22.x]
 
     steps:
-      - name: "✅ Checkout code"
+      - name: '✅ Checkout code'
         uses: actions/checkout@v4
 
-      - name: "📦 Setup pnpm"
+      - name: '📦 Setup pnpm'
         uses: pnpm/action-setup@v2
         with:
           version: 9.15.0
 
-      - name: "🔧 Setup Node.js"
+      - name: '🔧 Setup Node.js'
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
 
-      - name: "📥 Install dependencies"
+      - name: '📥 Install dependencies'
         run: pnpm install --frozen-lockfile
 
-      - name: "🧪 Run unit tests"
+      - name: '🧪 Run unit tests'
         run: pnpm test:ci
 
-      - name: "📊 Upload coverage to Codecov"
+      - name: '📊 Upload coverage to Codecov'
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
