--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: "🏗️ Build & Lighthouse"
+name: '🏗️ Build & Lighthouse'
 
 on:
   push:
@@ -11,35 +11,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: "✅ Checkout code"
+      - name: '✅ Checkout code'
         uses: actions/checkout@v4
 
-      - name: "📦 Setup pnpm"
+      - name: '📦 Setup pnpm'
         uses: pnpm/action-setup@v2
         with:
           version: 9.15.0
 
-      - name: "🔧 Setup Node.js"
+      - name: '🔧 Setup Node.js'
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
           cache: 'pnpm'
 
-      - name: "📥 Install dependencies"
+      - name: '📥 Install dependencies'
         run: pnpm install --frozen-lockfile
 
-      - name: "🏗️ Build project"
+      - name: '🏗️ Build project'
         run: pnpm build
 
-      - name: "📦 Build library bundle"
+      - name: '📦 Build library bundle'
         run: pnpm build:lib
 
-      - name: "📤 Upload build artifacts"
+      - name: '📤 Upload build artifacts'
         uses: actions/upload-artifact@v3
         with:
           name: next-build
           path: .next/
-      - name: "📤 Upload library artifacts"
+      - name: '📤 Upload library artifacts'
         uses: actions/upload-artifact@v3
         with:
           name: dist
@@ -50,24 +50,24 @@ jobs:
     needs: build
 
     steps:
-      - name: "✅ Checkout code"
+      - name: '✅ Checkout code'
         uses: actions/checkout@v4
 
-      - name: "📦 Setup pnpm"
+      - name: '📦 Setup pnpm'
         uses: pnpm/action-setup@v2
         with:
           version: 9.15.0
 
-      - name: "🔧 Setup Node.js"
+      - name: '🔧 Setup Node.js'
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
           cache: 'pnpm'
 
-      - name: "📥 Install dependencies"
+      - name: '📥 Install dependencies'
         run: pnpm install --frozen-lockfile
 
-      - name: "📊 Run Lighthouse CI"
+      - name: '📊 Run Lighthouse CI'
         uses: treosh/lighthouse-ci-action@v10
         env:
           LHCI_TOKEN: ${{ secrets.LHCI_TOKEN }}
