--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: "🔍 Lint & Type Check"
+name: '🔍 Lint & Type Check'
 
 on:
   push:
@@ -15,28 +15,28 @@ jobs:
         node-version: [20.x, 22.x]
 
     steps:
-      - name: "✅ Checkout code"
+      - name: '✅ Checkout code'
         uses: actions/checkout@v4
 
-      - name: "📦 Setup pnpm"
+      - name: '📦 Setup pnpm'
         uses: pnpm/action-setup@v2
         with:
           version: 9.15.0
 
-      - name: "🔧 Setup Node.js"
+      - name: '🔧 Setup Node.js'
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
 
-      - name: "📥 Install dependencies"
+      - name: '📥 Install dependencies'
         run: pnpm install --frozen-lockfile
 
-      - name: "🎯 Run ESLint"
+      - name: '🎯 Run ESLint'
         run: pnpm lint:ci
 
-      - name: "✨ Check formatting with Prettier"
+      - name: '✨ Check formatting with Prettier'
         run: pnpm format:check
 
-      - name: "📋 TypeScript type check"
+      - name: '📋 TypeScript type check'
         run: pnpm typecheck
