--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,4 +1,4 @@
-name: "✅ PR Validation"
+name: '✅ PR Validation'
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ jobs:
   semantic-pr:
     runs-on: ubuntu-latest
     steps:
-      - name: "🔎 Validate PR title"
+      - name: '🔎 Validate PR title'
         uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
