--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: "🚀 Release"
+name: '🚀 Release'
 
 on:
   push:
@@ -13,32 +13,32 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: "✅ Checkout code"
+      - name: '✅ Checkout code'
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: "📦 Setup pnpm"
+      - name: '📦 Setup pnpm'
         uses: pnpm/action-setup@v2
         with:
           version: 9.15.0
 
-      - name: "🔧 Setup Node.js"
+      - name: '🔧 Setup Node.js'
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
           cache: 'pnpm'
 
-      - name: "📥 Install dependencies"
+      - name: '📥 Install dependencies'
         run: pnpm install --frozen-lockfile
 
-      - name: "🏗️ Build library bundle"
+      - name: '🏗️ Build library bundle'
         run: pnpm build:lib
 
-      - name: "📚 Generate API docs"
+      - name: '📚 Generate API docs'
         run: pnpm docs:api
 
-      - name: "🚀 Run semantic-release"
+      - name: '🚀 Run semantic-release'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
