--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@9.15.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "pnpm generate:og && next build",
     "build:lib": "tsup",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx",
@@ -29,7 +29,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "docs:api": "typedoc",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "generate:og": "node scripts/generate-og-images.mjs"
   },
   "dependencies": {
     "@pdf-lib/fontkit": "^1.1.1",
