feat: postgres history and monetization docs

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,19 @@ NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=your-verification-code
 
 # Analytics (Optional)
 NEXT_PUBLIC_ANALYTICS_ID=
+NEXT_PUBLIC_ANALYTICS_ENDPOINT=/api/analytics
+ANALYTICS_DATA_DIR=var/analytics
+
+# App storage & auth
+APP_DATA_DIR=var/app
+DATABASE_URL=postgresql://user:password@localhost:5432/persian_tools
+SESSION_TTL_DAYS=7
+SUBSCRIPTION_WEBHOOK_SECRET=
+
+# Support Links
+NEXT_PUBLIC_SUPPORT_ONETIME_URL=
+NEXT_PUBLIC_SUPPORT_MONTHLY_URL=
+NEXT_PUBLIC_SUPPORT_SPONSOR_URL=
 
 # Feature Flags
 NEXT_PUBLIC_ENABLE_BETA_FEATURES=false
