--- a/skill.toml
+++ b/skill.toml
@@ -1,4 +1,18 @@
-# کانفیگ مهارت‌ها برای پروژه Persian Tools
+# کانفیگ مهارت‌ها برای پروژه Persian Tools (Refactored)
+
+[project]
+name = "Persian Tools"
+stack = ["Next.js 14", "React 18", "TypeScript", "Tailwind", "PostgreSQL"]
+package_manager = "pnpm"
+primary_language = "fa-IR"
+rtl_required = true
+no_external_runtime_dependencies = true
+
+[constraints]
+font = "IRANSansX"
+typescript_strict = true
+avoid_any = true
+privacy_first = true
 
 [skills]
 # تعریف مهارت‌ها و تخصص‌های مختلف برای پروژه
@@ -7,31 +21,37 @@ project_engineer = "مهندس پروژه"
 ui_ux_specialist = "متخصص UI/UX"
 seo_specialist = "متخصص SEO"
 full_stack_web_developer = "متخصص برنامه‌نویسی فول استک وب"
+qa_engineer = "متخصص QA و تست"
 
 [skills.project_architect]
 description = "طراحی و معماری ساختار کلی پروژه، انتخاب فناوری‌های مناسب و تصمیم‌گیری‌های بلندمدت."
 responsibilities = ["انتخاب فناوری‌ها", "تعریف معماری سیستم", "مدیریت نیازمندی‌ها", "رصد و اصلاح معماری پروژه"]
-required_knowledge = ["معماری نرم‌افزار", "مدیریت پروژه", "طراحی سیستم‌های مقیاس‌پذیر"]
+required_knowledge = ["معماری نرم‌افزار", "Next.js App Router", "طراحی سیستم‌های مقیاس‌پذیر", "حریم خصوصی داده"]
 
 [skills.project_engineer]
 description = "پیاده‌سازی جزئیات فنی پروژه، همکاری با تیم‌های توسعه و انجام پیاده‌سازی‌های اصلی."
 responsibilities = ["برنامه‌ریزی فنی", "مدیریت تیم‌های توسعه", "تضمین کیفیت فنی"]
-required_knowledge = ["مهندسی نرم‌افزار", "مدیریت پروژه", "توسعه وب"]
+required_knowledge = ["مهندسی نرم‌افزار", "TypeScript", "توسعه وب", "PostgreSQL"]
 
 [skills.ui_ux_specialist]
 description = "طراحی و بهبود تجربه کاربری، طراحی رابط‌های کاربری و تعاملات."
 responsibilities = ["طراحی UI", "ایجاد تجربه کاربری روان", "رعایت استانداردهای دسترسی‌پذیری", "بازخورد و ارزیابی تجربه کاربری"]
-required_knowledge = ["طراحی رابط کاربری", "اصول تجربه کاربری", "ابزارهای طراحی (مثل Figma, Sketch)"]
+required_knowledge = ["طراحی رابط کاربری", "اصول تجربه کاربری", "دسترسی‌پذیری", "طراحی RTL"]
 
 [skills.seo_specialist]
 description = "بهینه‌سازی موتور جستجو برای بهبود رتبه سایت در نتایج جستجو."
 responsibilities = ["تحلیل و بهبود SEO سایت", "تحقیق کلمات کلیدی", "تجزیه و تحلیل رقبا", "ایجاد و بهینه‌سازی محتوای سایت"]
-required_knowledge = ["SEO on-page and off-page", "تحلیل کلمات کلیدی", "ابزارهای SEO (مثل Google Analytics, SEMrush)"]
+required_knowledge = ["SEO on-page and off-page", "تحلیل کلمات کلیدی", "Structured Data", "Core Web Vitals"]
 
 [skills.full_stack_web_developer]
 description = "توسعه‌دهنده فول استک برای طراحی، پیاده‌سازی و نگهداری بخش‌های مختلف پروژه."
 responsibilities = ["طراحی رابط کاربری", "توسعه Backend و Frontend", "یکپارچگی APIها", "مدیریت دیتابیس"]
-required_knowledge = ["HTML, CSS, JavaScript", "Node.js, Python, Django, React", "SQL, PostgreSQL", "CI/CD, Git"]
+required_knowledge = ["HTML, CSS, TypeScript", "Node.js, Next.js, React", "SQL, PostgreSQL", "CI/CD, Git"]
+
+[skills.qa_engineer]
+description = "تضمین کیفیت، طراحی تست‌های واحد و یکپارچه و پایش رگرسیون‌ها."
+responsibilities = ["طراحی تست‌های واحد", "تست‌های E2E در صورت نیاز", "تحلیل رگرسیون", "گزارش‌دهی کیفیت"]
+required_knowledge = ["Vitest", "Playwright", "تست‌نویسی فرانت‌اند", "دسترسی‌پذیری پایه"]
 
 [skills.additional_skills]
 # در صورت نیاز به مهارت‌های اضافی می‌توان اضافه کرد
@@ -51,5 +71,5 @@ required_knowledge = ["Docker, Kubernetes", "AWS, Azure", "CI/CD tools like Jenk
 
 [skills.cloud_computing_expert]
 description = "طراحی و پیاده‌سازی سیستم‌های مبتنی بر محاسبات ابری."
-responsibilities = ["مدیریت منابع ابری", "پیاده‌سازی معماری ابری مقیاس‌پذیر", "انتقال داده‌ها به ابرا"]
+responsibilities = ["مدیریت منابع ابری", "پیاده‌سازی معماری ابری مقیاس‌پذیر", "انتقال داده‌ها به ابر"]
 required_knowledge = ["AWS, GCP, Azure", "Serverless Architecture", "Cloud Security Best Practices"]
