chore(prisma): add workflows, seed, and docs

--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,15 @@ ANALYTICS_DATA_DIR=var/analytics
 
 # App storage & auth
 APP_DATA_DIR=var/app
-DATABASE_URL=postgresql://user:password@localhost:5432/persian_tools
+DATABASE_URL=postgresql://user:password@localhost:5432/persian_tools?schema=public
 SESSION_TTL_DAYS=7
 SUBSCRIPTION_WEBHOOK_SECRET=
+
+# Seed (Optional)
+SEED_ADMIN_EMAIL=
+SEED_ADMIN_PASSWORD=
+SEED_DEMO_EMAIL=
+SEED_DEMO_PASSWORD=
 
 # Support Links
 NEXT_PUBLIC_SUPPORT_ONETIME_URL=
