--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -8,9 +8,14 @@ on:
   schedule:
     - cron: '0 0 * * 0'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   security:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
       - name: '✅ Checkout code'
