--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,9 +6,14 @@ on:
   pull_request:
     branches: [main, develop]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
       - name: '✅ Checkout code'
@@ -27,6 +32,9 @@ jobs:
 
       - name: '📥 Install dependencies'
         run: pnpm install --frozen-lockfile
+
+      - name: '🧬 Prisma generate'
+        run: pnpm prisma:generate
 
       - name: '🏗️ Build project'
         run: pnpm build
@@ -48,6 +56,7 @@ jobs:
   lighthouse:
     runs-on: ubuntu-latest
     needs: build
+    timeout-minutes: 20
 
     steps:
       - name: '✅ Checkout code'
@@ -66,6 +75,9 @@ jobs:
 
       - name: '📥 Install dependencies'
         run: pnpm install --frozen-lockfile
+
+      - name: '🧬 Prisma generate'
+        run: pnpm prisma:generate
 
       - name: '📊 Run Lighthouse CI'
         uses: treosh/lighthouse-ci-action@v10
