--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -6,9 +6,14 @@ on:
   pull_request:
     branches: [main, develop]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   e2e:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
       - name: '✅ Checkout code'
@@ -28,8 +33,17 @@ jobs:
       - name: '📥 Install dependencies'
         run: pnpm install --frozen-lockfile
 
+      - name: '🗄️ Cache Playwright browsers'
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: playwright-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml', 'playwright.config.ts') }}
+
       - name: '🎬 Install Playwright browsers'
         run: pnpm exec playwright install --with-deps
+
+      - name: '🧬 Prisma generate'
+        run: pnpm prisma:generate
 
       - name: '🏗️ Build project'
         run: pnpm build
