--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,9 +4,14 @@ on:
   pull_request:
     types: [opened, edited, synchronize, reopened]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   semantic-pr:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: '🔎 Validate PR title'
         uses: amannn/action-semantic-pull-request@v5
