--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,9 +6,14 @@ on:
   pull_request:
     branches: [main, develop]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 20
 
     strategy:
       matrix:
@@ -31,6 +36,9 @@ jobs:
 
       - name: '📥 Install dependencies'
         run: pnpm install --frozen-lockfile
+
+      - name: '🧬 Prisma generate'
+        run: pnpm prisma:generate
 
       - name: '🧪 Run unit tests'
         run: pnpm test:ci
