--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,16 @@ dist
 .next
 .vite
 coverage
-docs
 .DS_Store
 *.tsbuildinfo
 var/
+docs/api
+docs/api/
+
+# Env files
+.env
+.env.*
+!.env.example
 
 # Playwright
 /test-results/
@@ -14,3 +20,6 @@ var/
 /blob-report/
 /playwright/.cache/
 /playwright/.auth/
+
+# Local MCP logs
+.setting/
