--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "format:check": "prettier --check .",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
+    "ci:quick": "pnpm lint && pnpm typecheck && pnpm vitest --run",
     "bench": "vitest bench",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
@@ -30,24 +31,43 @@
     "build-storybook": "storybook build",
     "docs:api": "typedoc",
     "release": "semantic-release",
-    "generate:og": "node scripts/generate-og-images.mjs"
+    "generate:og": "node scripts/generate-og-images.mjs",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
+    "prisma:seed": "prisma db seed",
+    "prisma:seed:reset": "pnpm exec tsx prisma/reset-seed.ts",
+    "postinstall": "prisma generate"
+  },
+  "codex": {
+    "mcp-start": "bash scripts/mcp-start.sh"
   },
   "dependencies": {
     "@pdf-lib/fontkit": "^1.1.1",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "framer-motion": "^12.29.2",
     "jszip": "^3.10.1",
     "next": "^14.2.5",
-    "pg": "^8.14.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.10.38",
+    "pg": "^8.18.0",
+    "prisma": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
+    "@modelcontextprotocol/sdk": "^1.26.0",
+    "@modelcontextprotocol/server-everything": "^2026.1.26",
     "@next/bundle-analyzer": "^14.2.5",
+    "@openai/codex-shell-tool-mcp": "^0.97.0",
     "@playwright/test": "^1.42.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.0.6",
+    "@semantic-release/npm": "^12.0.1",
     "@storybook/addon-essentials": "^7.6.10",
     "@storybook/addon-interactions": "^7.6.10",
     "@storybook/addon-links": "^7.6.10",
@@ -57,6 +77,7 @@
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/node": "^25.2.0",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
@@ -78,13 +99,10 @@
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "semantic-release": "^23.0.8",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^10.0.6",
-    "@semantic-release/npm": "^12.0.1",
     "tailwindcss": "^3.4.1",
     "terser": "^5.46.0",
     "tsup": "^8.3.0",
+    "tsx": "^4.21.0",
     "typedoc": "^0.27.6",
     "typescript": "5.5.4",
     "vitest": "^1.6.0"
