--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "persian-tools",
   "private": false,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "packageManager": "pnpm@9.15.0",
   "scripts": {
     "dev": "next dev",
@@ -17,6 +17,7 @@
     "test:ci": "vitest --run --coverage",
     "test:watch": "vitest --watch",
     "test:e2e": "playwright test",
+    "test:e2e:ci": "PLAYWRIGHT_SKIP_FIREFOX=1 playwright test --project=chromium --reporter=list",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format:check": "prettier --check .",
     "test:ui": "vitest --ui",
@@ -48,7 +49,7 @@
     "@prisma/client": "^7.3.0",
     "framer-motion": "^12.29.2",
     "jszip": "^3.10.1",
-    "next": "^14.2.5",
+    "next": "^16.1.6",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.10.38",
     "pg": "^8.18.0",
@@ -57,22 +58,23 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.9.1",
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
     "@modelcontextprotocol/sdk": "^1.26.0",
     "@modelcontextprotocol/server-everything": "^2026.1.26",
-    "@next/bundle-analyzer": "^14.2.5",
+    "@next/bundle-analyzer": "^16.1.6",
     "@openai/codex-shell-tool-mcp": "^0.97.0",
-    "@playwright/test": "^1.42.1",
+    "@playwright/test": "^1.51.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^10.0.6",
     "@semantic-release/npm": "^12.0.1",
-    "@storybook/addon-essentials": "^7.6.10",
-    "@storybook/addon-interactions": "^7.6.10",
-    "@storybook/addon-links": "^7.6.10",
-    "@storybook/nextjs": "^7.6.10",
-    "@storybook/react": "^7.6.10",
+    "@storybook/addon-essentials": "9.0.0-alpha.12",
+    "@storybook/addon-interactions": "9.0.0-alpha.10",
+    "@storybook/addon-links": "9.0.0-alpha.12",
+    "@storybook/nextjs": "9.0.0-alpha.12",
+    "@storybook/react": "9.0.0-alpha.12",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
@@ -87,11 +89,11 @@
     "@vitest/ui": "^1.6.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.5",
+    "eslint-config-next": "^15.5.12",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "husky": "^8.0.3",
     "jsdom": "^24.0.0",
@@ -99,6 +101,7 @@
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "semantic-release": "^23.0.8",
+    "storybook": "9.0.0-alpha.12",
     "tailwindcss": "^3.4.1",
     "terser": "^5.46.0",
     "tsup": "^8.3.0",
@@ -115,6 +118,53 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
+    },
+    "./numbers": {
+      "types": "./dist/numbers/index.d.ts",
+      "import": "./dist/numbers/index.mjs",
+      "require": "./dist/numbers/index.js"
+    },
+    "./localization": {
+      "types": "./dist/localization/index.d.ts",
+      "import": "./dist/localization/index.mjs",
+      "require": "./dist/localization/index.js"
+    },
+    "./validation": {
+      "types": "./dist/validation/index.d.ts",
+      "import": "./dist/validation/index.mjs",
+      "require": "./dist/validation/index.js"
+    },
+    "./finance": {
+      "types": "./dist/finance.d.ts",
+      "import": "./dist/finance.mjs",
+      "require": "./dist/finance.js"
+    },
+    "./date-tools": {
+      "types": "./dist/date-tools.d.ts",
+      "import": "./dist/date-tools.mjs",
+      "require": "./dist/date-tools.js"
+    }
+  },
+  "typesVersions": {
+    "*": {
+      "numbers": [
+        "dist/numbers/index.d.ts"
+      ],
+      "localization": [
+        "dist/localization/index.d.ts"
+      ],
+      "validation": [
+        "dist/validation/index.d.ts"
+      ],
+      "finance": [
+        "dist/finance.d.ts"
+      ],
+      "date-tools": [
+        "dist/date-tools.d.ts"
+      ],
+      "*": [
+        "dist/index.d.ts"
+      ]
     }
   },
   "files": [
@@ -149,5 +199,11 @@
   "bugs": {
     "url": "https://github.com/asdeveloop/persian-tools/issues"
   },
-  "homepage": "https://persian-tools.ir"
+  "homepage": "https://persian-tools.ir",
+  "pnpm": {
+    "overrides": {
+      "lodash": "4.17.23",
+      "hono": "4.11.7"
+    }
+  }
 }
