--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,7 +59,13 @@
     "shared/**/*.ts",
     "shared/**/*.tsx",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+    "bench/**/*.ts",
+    "middleware.ts",
+    "playwright.config.ts",
+    "tailwind.config.ts",
+    "tsup.config.ts",
+    "vitest.config.ts"
   ],
   "exclude": ["node_modules", "dist", "examples", ".next"]
 }
